fixed overlaping id name

--- a/src/components/myTabs/myTabs.less
+++ b/src/components/myTabs/myTabs.less
@@ -80,9 +80,11 @@ my-tabs {
             width: 0;
             height: 0;
             overflow: hidden;
+            display: none;
             &.showContent {
                 width: 100%;
                 height: auto;
+                display: block;
             }
         }
     }
