--- a/src/routes/app._games.account/lol/account_lol.less
+++ b/src/routes/app._games.account/lol/account_lol.less
@@ -11,7 +11,7 @@
 		}
 	}
 	.bigger-size {
-		font-size: 1.4em;
+		font-size: 1.65em;
 	}
 	my-tab-body > * {
 		width: 100%;
